--- a/web/logado/template.xhtml
+++ b/web/logado/template.xhtml
@@ -256,6 +256,10 @@
                                 <i class="fa fa fa-shield"> - Professores</i></h:link>
                         </li>
                         <li>
+                            <h:link outcome="/administrador/aluno" >
+                                <i class="fa fa fa-shield"> - Alunos</i></h:link>
+                        </li>
+                        <li>
                             <h:link outcome="/administrador/curso" >
                                 <i class="fa fa fa-shield"> - Curso</i></h:link>
                         </li>
