--- a/web/logado/template.xhtml
+++ b/web/logado/template.xhtml
@@ -263,6 +263,10 @@
                             <h:link outcome="/administrador/curso" >
                                 <i class="fa fa fa-shield"> - Curso</i></h:link>
                         </li>
+                        <li>
+                            <h:link outcome="/administrador/carteirinhaBiblioteca" >
+                                <i class="fa fa fa-shield"> - Carteirinha</i></h:link>
+                        </li>
                     </h:panelGroup>
 
                     <li>
