coomit caso de uso empressa /rossi

--- a/web/logado/template.xhtml
+++ b/web/logado/template.xhtml
@@ -267,6 +267,11 @@
                             <h:link outcome="/administrador/carteirinhaBiblioteca" >
                                 <i class="fa fa fa-shield"> - Carteirinha</i></h:link>
                         </li>
+                        
+                         <li>
+                            <h:link outcome="/administrador/empresa" >
+                                <i class="fa fa fa-shield"> - Empresa</i></h:link>
+                        </li>
                     </h:panelGroup>
 
                     <li>
