--- a/web/logado/template.xhtml
+++ b/web/logado/template.xhtml
@@ -272,6 +272,10 @@
                             <h:link outcome="/administrador/empresa" >
                                 <i class="fa fa fa-shield"> - Empresa</i></h:link>
                         </li>
+                         <li>
+                            <h:link outcome="/administrador/gedod" >
+                                <i class="fa fa fa-shield"> - Gerenciador de equipamentos danificados</i></h:link>
+                        </li>
                     </h:panelGroup>
 
                     <li>
